@@ -3,6 +3,7 @@ Revision history for Perl extension Inline-Ruby.
     - Start integrating the patch from
         https://rt.cpan.org/Public/Bug/Display.html?id=32536 for compatibility
         with ruby-1.9.x/etc.
+        - Applied it semi-manually to Makefile.PL, and to the .xs and .c files.
 
 0.02        Thu  9 Aug 22:42:29 IDT 2012
     - RELEASE: Inline-Ruby-0.03
